--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.5",
+    "@vueuse/core": "^13.6.0",
     "element-plus": "^2.9.10",
     "pinia": "^3.0.2",
     "postcss-import": "^16.1.0",
